@@ -1434,12 +1434,15 @@ pushlevel_args:
                       pkl_ast_node arg_name
                         = pkl_ast_make_identifier (pkl_parser->ast,
                                                    "SELF");
+                      int registered_p __attribute__ ((unused));
+
                       pkl_ast_node arg
                         = pkl_ast_make_func_arg (pkl_parser->ast,
                                                  arg_type, arg_name,
                                                  NULL /* initial */);
 
-                      assert (pkl_register_arg (pkl_parser, arg));
+                      registered_p = pkl_register_arg (pkl_parser, arg);
+                      assert (registered_p);
                     }
                 }
         ;
